--- a/aumanager/src/Components/imageslider.css
+++ b/aumanager/src/Components/imageslider.css
@@ -1,3 +1,10 @@
 #slider__height{
     font-size: large !important;
 }
+
+
+.d-block.w-100 {
+    display: block!important;
+    height: 645px;
+    width: 100% !important;
+}
